--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.12.2
 fake_useragent==1.2.1
 fastapi==0.103.1
 pandas==1.3.3
+pydantic==2.3.0
 requests==2.31.0
+starlette>=0.27.0,<0.28.0
 uvicorn==0.15.0
-
